fix nodes color, fix z-index

--- a/assets/scss/globals.scss
+++ b/assets/scss/globals.scss
@@ -13,8 +13,8 @@ $red: #8c1807;
 
 //Theme colors
 $scheme-main: $black-grey;
-$primary: $black-grey;
-$secondary: $grey-blue;
+$primary: $grey-blue;
+$secondary: $purple;
 $light: $yellow;
 
 $background-primary: $black-grey;
